--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite"
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  }
 }
